<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="294dp"
    android:layout_height="158dp"
    android:background="@mipmap/bg_take_over_dialog">

    <TextView
        android:id="@+id/tv_take_over_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_take_over_title"
        android:textColor="@android:color/white"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/divider_hor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_refuse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_refuse"
        android:textColor="@android:color/white"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_hor" />

    <TextView
        android:id="@+id/tv_agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_agree"
        android:textColor="@color/color_2df3c1"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/divider_hor" />

    <View
        android:id="@+id/divider_hor"
        android:layout_width="292dp"
        android:layout_height="0.5dp"
        android:layout_marginBottom="44dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view3"
        android:layout_width="0.5dp"
        android:layout_height="44dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_hor" />
</androidx.constraintlayout.widget.ConstraintLayout>