<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <cn.rongcloud.sealmicandroid.ui.widget.CustomTitleBar
            android:id="@+id/login_top_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:middleTextSize="20sp"
            app:middleTitle="@string/app"
            app:rightTitle="@string/login_commit" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/ic_seal_mic_logo"
            app:layout_constraintBottom_toTopOf="@+id/mobile_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/login_title"
            android:layout_width="67.88dp"
            android:layout_height="14.42dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:src="@mipmap/seal_mic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView2"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/mobile_edit"
            android:layout_width="322dp"
            android:layout_height="44dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_mobile_edit_text"
            android:ems="10"
            android:hint="@string/please_input_right_mobile"
            android:inputType="phone"
            android:paddingStart="24dp"
            android:paddingLeft="24dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@{loginViewModel.mobileNameMutableLiveData}"
            android:textColor="@color/color_333333"
            android:textColorHint="@color/color_b2b2b2"
            android:textSize="14dp"
            app:layout_constraintBottom_toTopOf="@+id/auth_code_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:hint="@string/please_input_right_mobile" />


        <EditText
            android:id="@+id/auth_code_edit"
            android:layout_width="322dp"
            android:layout_height="44dp"
            android:background="@drawable/bg_mobile_edit_text"
            android:ems="10"
            android:focusable="auto"
            android:gravity="start|center_vertical"
            android:hint="@string/please_input_auth_code"
            android:inputType="textPersonName"
            android:paddingStart="24dp"
            android:paddingLeft="24dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@{loginViewModel.authCodeMutableLiveData}"
            android:textColor="@color/color_333333"
            android:textColorHint="@color/color_b2b2b2"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:hint="@string/please_input_auth_code" />


        <Button
            android:id="@+id/auth_code_button"
            android:layout_width="80dp"
            android:layout_height="34dp"
            android:layout_marginRight="5dp"
            android:background="@mipmap/bg_button_rect"
            android:onClick="@{(v)->loginViewModel.obtainAuthCode(loginViewModel.mobileNameMutableLiveData)}"
            android:text="@string/get_auth_code"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/auth_code_edit"
            app:layout_constraintEnd_toEndOf="@+id/auth_code_edit"
            app:layout_constraintTop_toTopOf="@+id/auth_code_edit" />

        <TextView
            android:id="@+id/login_nulltitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/login_commit"
            android:layout_width="322dp"
            android:layout_height="49dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/bg_login_button"
            android:gravity="center"
            android:onClick="@{(v)->loginViewModel.login(loginViewModel.mobileNameMutableLiveData,loginViewModel.authCodeMutableLiveData)}"
            android:text="@string/login_commit"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <variable
            name="loginViewModel"
            type="cn.rongcloud.sealmicandroid.ui.login.LoginViewModel" />

    </data>
</layout>